[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/axe.png" type="Texture" id=1]
[ext_resource path="res://scenes/trace.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/drop_the_hook.gd" type="Script" id=6]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.627451, 0.627451, 0.627451, 0.0392157, 0.203922, 0.203922, 0.203922, 0.27451 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.21566
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.6675
height = 0.0

[node name="hook" type="KinematicBody2D"]
collision_layer = 2147483656
collision_mask = 2147483653
script = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="."]

[node name="trace" parent="Position2D" instance=ExtResource( 2 )]
gradient = SubResource( 1 )

[node name="drop_the_hook" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="drop_the_hook"]
position = Vector2( 9.08663, 6.8795 )
shape = SubResource( 2 )

[node name="axe" type="Sprite" parent="."]
position = Vector2( -0.111362, -0.111362 )
texture = ExtResource( 1 )

[node name="Timer_fall_of_the_axe" type="Timer" parent="."]

[node name="hand" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.66585, 5.96046e-07 )
rotation = 0.279253
scale = Vector2( 1, 0.2 )
shape = SubResource( 3 )
disabled = true

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 8.68626, 7.34991 )
node_a = NodePath("..")
[connection signal="body_entered" from="drop_the_hook" to="." method="_on_drop_the_hook_body_entered"]
[connection signal="timeout" from="Timer_fall_of_the_axe" to="." method="_on_Timer_fall_of_the_axe_timeout"]
